--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+    margin: 0px;
+    padding: 0px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Navbar{
+    height: 50px;
+    width: 100%;
+    background-color: rgb(30, 28, 28);
+    color:white;
+    display: flex;
+    justify-content: space-evenly;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1{
+    padding: 0;margin: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.links{
+    font-size: 27px;
+    padding-top: 6px;
+    font-family: 'Dancing Script', cursive;
+    font-weight: 700;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+    height: 100vh;
+    width: 100vw;
+}
+.App{
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient( #c6ffdd, #fbd786, #f7797d);
+}
+button{
+    height: 50px;
+    width: 198px;
+    border-radius: 26px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.PageNotFound{
+    display: flex;
+    justify-content: center;
+    
+}
+.PageNotFound img{
+    margin-top: 200px;
+    margin-left: -280px;
+}
+.PageNotFound h1{
+    margin-left: 200px;
+}
+.inputTags{
+    display: grid;
+    grid-template-columns: 250px 250px;
+    margin-top: 0px;
+    padding-top: 100px;
+    margin-left: 250px;
+    gap: 130px;
+}
+.buttons{
+    margin-top: 40px;
+    margin-left: 650px;
+ 
+}
+.text-field {
+    position: relative;
+    margin: 10px 2.5px 20px 2.5px;
+}
+input {
+    height: 40px;
+    width: 280px;
+    background: transparent;
+    display: inline-block;
+    border: 1px solid black;
+    color: #444;
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+}
+input:focus {
+        background-color:#fff;
+    }
+label {
+    color: #999;
+    position: absolute;
+    pointer-events: none;
+    left: 10px;
+    top: 20px;
+    transition: 0.2s;
+}
+input:focus ~ label, input:valid ~ label {
+    top: -10px;
+    left: 15px;
+    font-size: small;
+    color: #32cd32;
+    background-color:#fff;
+    padding:0 5px 0 5px;
+}
+Link{
+    /* padding-top: 10px; */
+    padding: 20px;
+    margin-left: 20px;
 }
